news handle click

--- a/app/src/main/res/layout/fragment_news_layout.xml
+++ b/app/src/main/res/layout/fragment_news_layout.xml
@@ -54,8 +54,10 @@
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/dp_8"
             android:contentDescription="@null"
+            android:onClick="@{() -> newsViewModel.setOnClickPage(false)}"
             android:padding="@dimen/dp_2"
             android:src="@drawable/ic_left_arrow"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/textPageNumber"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintRight_toLeftOf="@id/textPageNumber"
@@ -67,6 +69,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/dp_8"
             android:contentDescription="@null"
+            android:onClick="@{() -> newsViewModel.setOnClickPage(true)}"
             android:padding="@dimen/dp_2"
             android:src="@drawable/ic_right_arrow"
             app:layout_constraintBottom_toBottomOf="@id/textPageNumber"
@@ -79,7 +82,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_2"
             android:overScrollMode="never"
             app:data="@{newsViewModel.news}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -95,6 +98,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateDrawable="@drawable/bg_circle_progress"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <WebView
+            android:id="@+id/webNews"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
