--- a/app/src/main/res/layout/dialog_vaccine_layout.xml
+++ b/app/src/main/res/layout/dialog_vaccine_layout.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
             android:overScrollMode="never"
-            app:data="@{vaccineViewModel.vaccines}"
+            app:data="@{vaccineViewModel.remoteVaccines}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
