--- a/app/src/main/res/layout/fragment_vaccine_layout.xml
+++ b/app/src/main/res/layout/fragment_vaccine_layout.xml
@@ -12,6 +12,10 @@
         <variable
             name="apiConstant"
             type="com.sun.vaccovid19.utils.ApiConstant" />
+
+        <variable
+            name="isFromLocal"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +44,7 @@
             android:layout_marginStart="@dimen/dp_20"
             android:layout_marginTop="@dimen/dp_30"
             android:background="?selectableItemBackground"
-            android:onClick="@{() -> clickListener.onClickCategory(apiConstant.CLINICAL_VACCINE_PARAM)}"
+            android:onClick="@{() -> isFromLocal ? clickListener.onClickLocalCategory(apiConstant.VACCINE_PHASE_CLINICAL , apiConstant.VACCINE_CATEGORY_PARAM):clickListener.onClickRemoteCategory(apiConstant.CLINICAL_VACCINE_PARAM)}"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_clinical_vaccine"
             android:textColor="@android:color/black"
@@ -77,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_20"
             android:background="?selectableItemBackground"
-            android:onClick="@{() -> clickListener.onClickCategory(apiConstant.PHASE1_VACCINE_PARAM)}"
+            android:onClick="@{() -> isFromLocal ? clickListener.onClickLocalCategory(apiConstant.VACCINE_PHASE_1 , apiConstant.VACCINE_CATEGORY_PARAM):clickListener.onClickRemoteCategory(apiConstant.PHASE1_VACCINE_PARAM)}"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_phase1_vaccine"
             android:textColor="@android:color/black"
@@ -114,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_20"
             android:background="?selectableItemBackground"
-            android:onClick="@{() -> clickListener.onClickCategory(apiConstant.PHASE2_VACCINE_PARAM)}"
+            android:onClick="@{() -> isFromLocal ? clickListener.onClickLocalCategory(apiConstant.VACCINE_PHASE_2 , apiConstant.VACCINE_PHASE_12):clickListener.onClickRemoteCategory(apiConstant.PHASE2_VACCINE_PARAM)}"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_phase2_vaccine"
             android:textColor="@android:color/black"
@@ -151,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_20"
             android:background="?selectableItemBackground"
-            android:onClick="@{() -> clickListener.onClickCategory(apiConstant.PHASE3_VACCINE_PARAM)}"
+            android:onClick="@{() -> isFromLocal ? clickListener.onClickLocalCategory(apiConstant.VACCINE_PHASE_3 , apiConstant.VACCINE_PHASE_23):clickListener.onClickRemoteCategory(apiConstant.PHASE3_VACCINE_PARAM)}"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_phase3_vaccine"
             android:textColor="@android:color/black"
@@ -188,7 +192,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_20"
             android:background="?selectableItemBackground"
-            android:onClick="@{() -> clickListener.onClickCategory(apiConstant.PHASE4_VACCINE_PARAM)}"
+            android:onClick="@{() -> isFromLocal ? clickListener.onClickLocalCategory(apiConstant.VACCINE_PHASE_AUTHORIZED , apiConstant.VACCINE_CATEGORY_PARAM):clickListener.onClickRemoteCategory(apiConstant.PHASE4_VACCINE_PARAM)}"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_phase4_vaccine"
             android:textColor="@android:color/black"
